2019-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-460010.c,
	  support/regression/tests/bug1928022.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* src/pdk/gen.c:
	  Improve handling of 16-bit return value,
	  fix stack parameters.

2019-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix a bug in 16-bit store from registers via rematerialized pointer with non-zero offset;
	  fix a bug in handling of on-stack operands to &,|;
	  fix a bug in handling of past-end offsets for stack operands.

2019-04-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix handling of -0.0 in ifx.

2019-04-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/linksrc/lkrloc3.c:
	  Linker warning improvement, patch by Nicolas Lesser.
	* support/regression/tests/*.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* src/pdk/gen.c:
	  Fix wide left shift by large literal.
	* sim/ucsim/pdk.src/glob.cc,
	  sim/ucsim/pdk.src/glob.h,
	  sim/ucsim/pdk.src/inst.cc,
	  sim/ucsim/pdk.src/instcl.h,
	  sim/ucsim/pdk.src/pdk.cc:
	  pdk13 simulator, patch by Nicolas Lesser.

2019-04-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/*.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* sdas/linksrc/aslink.h,
	  sdas/linksrc/lkmain.c,
	  sdas/linksrc/lkrloc3.c:
	  Linker memory size warning fixes, patches by Nicolas Lesser.
	* src/pdk/ralloc.c:
	  Fix handling of shift result assigned to sfr.

2019-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Assembler fixes.

2019-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Assembler fixes.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/aspdk13/pdk13mch.c,
	  sdas/aspdk13/pdk13pst.c: