@@ -1991,8 +1991,9 @@ genCmp (const iCode *ic, iCode *ifx)
         {
           cheapMove (ASMOP_A, 0, left->aop, i, true, !i);
           cheapMove (ASMOP_P, 0, right->aop, i, false, !i);
-          emit2 ("subc", "a, p");
+          emit2 (started ? "subc" : "sub", "a, p");
           cost (1, 1);
+          started = true;
         }
       else
         {
