@@ -28,7 +28,7 @@ f (L p0, L p1, L p2, L p3, L p4, L p5, L p6, L p7, L p8, ...)
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_pdk14 // Lack of memory
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
   f (1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L, 10L, 11L, 0L);
   return;
 #endif
